# fer-inference-api

./: .dockerignore  .env.example  .env.gpu.example  .env.mock.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.gpu.yml  docker-compose.yml  models  pyproject.toml
bench/: locustfile.py  prep_test_image.py  profile_infer.py  profile_server.py  run_config_sweep.py  run_gpu_sweep.sh  run_sweep.py
nginx/: nginx.conf
scripts/: generate-certs.sh
src/fer_inference_api/: config.py  face_detector.py  main.py  model_loader.py  model_registry.py  pipeline.py  schemas.py
tests/: conftest.py  test_api.py  test_config.py  test_face_detector.py  test_model_loader.py  test_pipeline.py  test_schemas.py
