[project]
name = "fer-inference-api"
version = "0.1.0"
description = "Facial Expression Recognition inference API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "gunicorn>=23.0.0",
    "numpy>=2.0.0",
    "onnxruntime>=1.20.0",
    "opencv-python-headless>=4.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fer_inference_api"]

[dependency-groups]
dev = [
    "httpx2>=2.0.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
